@@ -7,6 +7,7 @@
 - NEW: Option to resolve to local eclipse projects (IVYDE-89) (thanks to Antony James Wilkins and Matt Goldspink)
 - NEW: Add errors marker to the Ivy container (IVYDE-78)
 - NEW: Handle a project: scheme for the path of the ivysettings.xml (IVYDE-94)
+- NEW: Need CleanCache task in context menu (IVYDE-114)
 
 - IMPROVE: Retrieve after resolve feature does not clean target directory first (IVYDE-105)
 
